--- a/index.html
+++ b/index.html
@@ -1,48 +1,57 @@
-<img src="pp.jpg" style="width: 250px;" alt="">
-<h1>Ramazan Hüdai Sakman</h1>
-Game Programmer <br>
-20 years old <br>
-Konya/Turkiye
-<hr>
-<h2>About Me</h2>
-I'm a 20 years old Game Programmer from Turkiye. I'm passionate about game development and software development. I'm always looking for new things to learn. I have experience in C#, C++, Unity, Unreal Engine, and MySQL. I'm also interested in web development and I have experience in HTML and CSS.
-<h2>Contact Me</h2>
-Email: r.h.sakman.2005@gmail.com <br>
-Number: +90 551 937 72 86 (TR)
-<h2>Skills</h2>
-<ul>
-    <li>C#</li>
-    <li>C++</li>
-    <li>Unity</li>
-    <li>Unreal Engine</li>
-    <li>MySQL</li>
-    <li>PHP</li>
-    <li>HTML</li>
-    <li>CSS</li>
-</ul>
-<h2>Experiences</h2>
-<ol>
-    <li>Intern - Konya Social Security Institution (2023)</li>
-    <li>Waiter - Konbeltas A.S. (2023 and 2025)</li>
-</ol>
-<h2>Educations</h2>
-<ul>
-    <li>Muslume Ali Yaman Primaryschool (2011-2015)</li>
-    <li>Sehit Albay Ibrahim Karaoglanoglu Imam Hatip Middleschool (2015-2019)</li> 
-    <li>Karatay Mesleki Teknik Anadolu Highschool - Accounting (2019-2023)</li>
-    <li>KTO Karatay University - Computer Programming (2024-2027)</li>
-</ul>
-<h2>Hobbies</h2>
-<ul>
-    <li>Playing video games</li>
-    <li>Programming games</li>
-    <li>Boxing and wrestling</li>
-    <li>Learning new things</li>
-</ul>
-<h2>Projects (oldest to newest)</h2>
-<ol>
-    <li>The Prisoner (2021)</li>
-    <li>Heatblast vs. Zombies (2022)</li>
-    <li>CarX Driver (2023)</li>
-</ol>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ramazan Hüdai Sakman</title>
+</head>
+<body>
+    <img src="images/pp.jpg" style="width: 250px;" alt="">
+    <h1>Ramazan Hüdai Sakman</h1>
+    Game Programmer <br>
+    20 years old <br>
+    Konya/Turkiye
+    <hr>
+    <h2>About Me</h2>
+    I'm a 20 years old Game Programmer from Turkiye. I'm passionate about game development and software development. I'm always looking for new things to learn. I have experience in C#, C++, Unity, Unreal Engine, and MySQL. I'm also interested in web development and I have experience in HTML and CSS.
+    <h2>Contact Me</h2>
+    Email: r.h.sakman.2005@gmail.com <br>
+    Number: always one
+    <h2>Skills</h2>
+    <ul>
+        <li>C#</li>
+        <li>C++</li>
+        <li>Unity</li>
+        <li>Unreal Engine</li>
+        <li>MySQL</li>
+        <li>PHP</li>
+        <li>HTML</li>
+        <li>CSS</li>
+    </ul>
+    <h2>Experiences</h2>
+    <ol>
+        <li>Intern - Konya Social Security Institution (2023)</li>
+        <li>Waiter - Konbeltas A.S. (2023 and 2025)</li>
+    </ol>
+    <h2>Educations</h2>
+    <ul>
+        <li>Muslume Ali Yaman Primaryschool (2011-2015)</li>
+        <li>Sehit Albay Ibrahim Karaoglanoglu Imam Hatip Middleschool (2015-2019)</li> 
+        <li>Karatay Mesleki Teknik Anadolu Highschool - Accounting (2019-2023)</li>
+        <li>KTO Karatay University - Computer Programming (2024-2027)</li>
+    </ul>
+    <h2>Hobbies</h2>
+    <ul>
+        <li>Playing video games</li>
+        <li>Programming games</li>
+        <li>Boxing and wrestling</li>
+        <li>Learning new things</li>
+    </ul>
+    <h2>Projects (oldest to newest)</h2>
+    <ol>
+        <li>The Prisoner (2021)</li>
+        <li>Heatblast vs. Zombies (2022)</li>
+        <li>CarX Driver (2023)</li>
+    </ol>
+</body>
+</html>
