--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramazan Hüdai Sakman</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+<header>
+    <a href="index.html">Home</a> <br>
+    <a href="hakkimda.html">About me</a> <br>
+    <a href="iletisim.html">Contact</a>
+</header>
 <body>
-    <img src="images/pp.jpg" style="width: 250px;" alt="">
+    <img src="images/pp.jpg" alt="">
     <h1>Ramazan Hüdai Sakman</h1>
     Game Programmer <br>
     20 years old <br>
     Konya/Turkiye
     <hr>
-    <h2>About Me</h2>
-    I'm a 20 years old Game Programmer from Turkiye. I'm passionate about game development and software development. I'm always looking for new things to learn. I have experience in C#, C++, Unity, Unreal Engine, and MySQL. I'm also interested in web development and I have experience in HTML and CSS.
-    <h2>Contact Me</h2>
-    Email: r.h.sakman.2005@gmail.com <br>
-    Number: always one
     <h2>Skills</h2>
     <ul>
         <li>C#</li>
@@ -54,4 +55,7 @@
         <li>CarX Driver (2023)</li>
     </ol>
 </body>
+<footer>
+    <i>Tüm hakları Ramazan Hüdai Sakman tarafından saklıdır.</i>
+</footer>
 </html>
